Task 23. added fixes to footer-address, social-link, and svg classes for dark mode

--- a/0x01-CSS_advanced/styles/23-style.css
+++ b/0x01-CSS_advanced/styles/23-style.css
@@ -210,5 +210,5 @@ ul.row {
 }
 
 .social-link > svg {
-    background: var(--text-color);
+    fill: var(--text-color);
 }
